--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# CMake files
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
@@ -9,3 +10,85 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+
+# Prerequisites
+*.d
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+
+# Kernel Module Compile Results
+*.mod*
+*.cmd
+.tmp_versions/
+modules.order
+Module.symvers
+Mkfile.old
+dkms.conf
+
+# Temporary build files
+/build
+/build.*
+/.vs
+/out
+/CMakeSettings.json
+*.tmp
+
+# Html document files
+/docs/html
+
+# LSP
+compile_commands.json
+.cache
+
+# Eclipse
+.cproject
+.project
+
+# Good Sync
+/_gsdata_
+
+# FreeFileSync
+/*.ffs_db
+
+# JetBrains
+/.idea
+/cmake-build-debug
