add support for mkdir

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_executable(vfs_test
     case/localfs_ls.cpp
+    case/localfs_mkdir.cpp
     case/localfs_read.cpp
     case/localfs_rm.cpp
     case/localfs_seek.cpp
