split rm() to unlink() and rmdir()

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,9 +3,9 @@ add_executable(vfs_test
     case/localfs_ls.cpp
     case/localfs_mkdir.cpp
     case/localfs_read.cpp
-    case/localfs_rm.cpp
     case/localfs_seek.cpp
     case/localfs_stat.cpp
+    case/localfs_unlink.cpp
     utils/cwdpath.c
     utils/exepath.c
     utils/file.c
