--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/cutest"]
 	path = third_party/cutest
 	url = https://github.com/qgymib/cutest.git
+[submodule "third_party/cmake-modules"]
+	path = third_party/cmake-modules
+	url = https://github.com/bilke/cmake-modules.git
