split generic tests into smaller test cases

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,10 +14,20 @@ add_executable(vfs_test
     case/overlayfs_truncate.c
     case/overlayfs_unlink.c
     case/overlayfs_write.c
+    generic/__init__.c
+    generic/check_root.c
+    generic/mkdir_parent_not_exist.c
+    generic/mkdir_rmdir_in_root.c
+    generic/open_parent_not_exist.c
+    generic/open_unlink_in_root.c
+    generic/rmdir_non_empty.c
+    generic/rmdir_type_mismatch.c
+    generic/truncate_larger_and_seek.c
+    generic/truncate_smaller_and_seek.c
+    generic/unlink_type_mismatch.c
     utils/cwdpath.c
     utils/exepath.c
     utils/fsbuilder.c
-    utils/generic_fs_tester.c
     utils/overlayfs_builder.c
     main.c
     test.c
